// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post renders postform 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "sagaTask": Object {
          "@@redux-saga/TASK": true,
          "cancel": [Function],
          "cont": [Function],
          "context": Object {},
          "end": [Function],
          "error": [Function],
          "id": 1,
          "isAborted": [Function],
          "isCancelled": [Function],
          "isRoot": true,
          "isRunning": [Function],
          "joiners": Array [],
          "meta": Object {
            "location": undefined,
            "name": "rootSaga",
          },
          "queue": Object {
            "abort": [Function],
            "addTask": [Function],
            "cancelAll": [Function],
            "getTasks": [Function],
          },
          "result": [Function],
          "setContext": [Function],
          "toPromise": [Function],
        },
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "sagaTask": Object {
            "@@redux-saga/TASK": true,
            "cancel": [Function],
            "cont": [Function],
            "context": Object {},
            "end": [Function],
            "error": [Function],
            "id": 1,
            "isAborted": [Function],
            "isCancelled": [Function],
            "isRoot": true,
            "isRunning": [Function],
            "joiners": Array [],
            "meta": Object {
              "location": undefined,
              "name": "rootSaga",
            },
            "queue": Object {
              "abort": [Function],
              "addTask": [Function],
              "cancelAll": [Function],
              "getTasks": [Function],
            },
            "result": [Function],
            "setContext": [Function],
            "toPromise": [Function],
          },
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <PostForm
    req="1"
    where="team"
  />
</ContextProvider>
`;

exports[`Post store snapshot 1`] = `
Object {
  "dispatch": [Function],
  "getState": [Function],
  "replaceReducer": [Function],
  "sagaTask": Object {
    "@@redux-saga/TASK": true,
    "cancel": [Function],
    "cont": [Function],
    "context": Object {},
    "end": [Function],
    "error": [Function],
    "id": 1,
    "isAborted": [Function],
    "isCancelled": [Function],
    "isRoot": true,
    "isRunning": [Function],
    "joiners": Array [],
    "meta": Object {
      "location": undefined,
      "name": "rootSaga",
    },
    "queue": Object {
      "abort": [Function],
      "addTask": [Function],
      "cancelAll": [Function],
      "getTasks": [Function],
    },
    "result": [Function],
    "setContext": [Function],
    "toPromise": [Function],
  },
  "subscribe": [Function],
  Symbol(observable): [Function],
}
`;
